# jadxd

./: .gitignore  README.md  test.sh
jadxd/: build.gradle.kts  settings.gradle.kts
jadxd/src/main/kotlin/dev/jadxd/: Main.kt
jadxd/src/main/kotlin/dev/jadxd/core/: Cache.kt  DalvikIds.kt  JadxBackend.kt  RenameStore.kt  SessionManager.kt
jadxd/src/main/kotlin/dev/jadxd/model/: Models.kt
jadxd/src/main/kotlin/dev/jadxd/server/: MethodRegistry.kt  ProtocolRoutes.kt  Routes.kt
jadxd/src/main/resources/: logback.xml
jadxd/src/test/kotlin/dev/jadxd/: CacheKeyTest.kt  DalvikIdsTest.kt
pyjadxd/: pyproject.toml
pyjadxd/examples/: demo.py
pyjadxd/pyjadxd/: __init__.py  client.py  errors.py  models.py
test-fixtures/src/com/test/: Base.java  Callable.java  Child.java  Helper.java
