[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyjadxd"
version = "0.1.0"
description = "Python client for jadxd – the JADX decompiler service"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio",
]
